fix: picker style on ios

--- a/src/theme/input.scss
+++ b/src/theme/input.scss
@@ -24,6 +24,7 @@ ion-item.item {
     width: 100%;
     background: var(--ion-color-light);
     border: 0;
+    border-radius: 0;
   }
 
   ion-input[class*="sc-ion-input"],
